style.css
*, *::after, *::before {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
}

html, body {
  height: 100%;
  -webkit-font-smoothing: antialiased;
  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
  background-color: #222222;
  font-family: Larsseit, -apple-system, BlinkMacSystemFont, "Roboto", "Helvetica Neue", Helvetica, Arial;
  overflow-x: hidden !important;
  height: auto;
}

@font-face {
    font-family: "Tiempos Headline";
    src: url("assets/fonts/TiemposHeadline-Semibold.woff") format('woff');
    font-weight: 600;
}

@font-face {
    font-family: "Larsseit";
    src: url("assets/fonts/Larsseit.woff") format('woff');
    font-weight: 400;
}

.clearfix {
  display: table;
}

.clearfix::after {
  clear: both;
}

#content-wrapper {
  margin: 0 auto;
  height: 100%;
  max-width: 860px;
  padding: 0 40px;
}

a{
  text-decoration: none;
  border-bottom: 1px solid rgba(242,239,232,0.2);
  transition: 0.15s border-bottom ease-out, 0.1s color ease-out;
}

a:hover {
  border-bottom: 1px solid #D3D6D7;
  opacity: 1;
  color: white
  transition: 0.15s border-bottom ease-out, 0.1s color ease-out;
}

header {
  margin: 0 auto;
  box-sizing: border-box;
}

header h1 {
  font-size: 120px;
  line-height: 112px;
  font-family: "Tiempos Headline";
  color: #F2EFE8;
  margin-bottom: 0px;

}

h2 {
  font-family: Larsseit;
  font-style: normal;
  font-weight: normal;
  font-size: 26px;
  line-height: 42px;
  color: #F2EFE8;
  margin-top: 20px;
  margin-bottom: 17px;
}

.column {
  float: left;
  width: 50%;
}

.left {
  width: 50%;
  margin-right: 40px;
}

.right {
  width: 44%;
}

.column p, a {
  font-family: Larsseit;
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 28px;
  color: #F2EFE8;
  opacity: 0.8;
}

h3 {
  font-family: Larsseit;
  font-style: normal;
  font-weight: 500;
  font-size: 18px;
  line-height: 26px;
  color: #F2EFE8;
  opacity: 0.4;
  margin-bottom: -5px;
}

.right h3 {
  margin-bottom: 9px;
}

section {
  margin-bottom: 21px;
}

.dropbox-logo {
  margin-top: 15px;
  margin-right: 3px;
  vertical-align: middle;
}


/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

.right ul {
  list-style-type: none;
  margin-top: 8px;
  padding-left: 0px;
  padding-bottom: 14px;
  cursor: pointer;
}

ul.social {
  list-style-type: none;
  padding-left: 0px;
}

.social li {
  display: inline-block;
  padding-right: 32px;
  vertical-align: middle;
}

.social a {
  border-bottom: 0 !important;
}

.right ul a {
  text-decoration: none;
}

.right li {
    font-family: Larsseit;
    border-bottom: 2px solid rgba(242,239,232,0.1);
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 28px;
    color: #F2EFE8;
    padding: 6px 0px;
    transition: 0.1s padding-left ease-out;
}

.right li::after {
  content: "";
  width: 16px;
  height: 14px;
  float: right;
  margin-top: 6px;
  margin-right: 8px;
  background-image: url("assets/right-arrow.svg");
  opacity: 0;
}

.right li:hover{
  padding-left: 6px;
  transition: 0.12s padding-left ease-out;
}


.right li:hover:after {
  opacity: 0.6;
  transition: margin-right 0.15s, opacity 0.15s;
  margin-right: 0px;
}


@media screen and (max-width: 800px) {

  #content-wrapper {
    padding: 0 40px;
    width: 100%;
  }

  .column {
    width: 100%;
  }

  .left{
    margin-right: 0;
  }

  header h1 {
    font-size: 100px;
    line-height: 112px;
  }
}

@media screen and (max-width: 500px) {

  #content-wrapper {
    padding: 0 32px;
    width: 100%;
  }

  .column {
    width: 100%;
  }

  .left{
    margin-right: 0;
  }

  header h1 {
    font-size: 70px;
    line-height: 80px;
  }

h2 {
  font-family: Larsseit;
  font-size: 24px;
  line-height: 34px;
  color: #F2EFE8;
  margin-top: 20px;
  margin-bottom: 17px;
}
}

